# aurora

./: .eslintignore  .gitignore  GIT_SETUP.md  NEXT_STEPS.md  PHASE_2_COMPLETE.md  README.md  SETUP.md  SHIPPING_CHECKLIST.md  USER_GUIDE.md  WIDGET_INVENTORY.md  WIDGET_NAMING_REFINEMENT.md  WIDGET_RECOMMENDATIONS.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
about/: Aurora OS Mission.md  Trust, Privacy, and Platform Consid.md  values.md
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  file_watcher.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ActiveClustersSection.tsx  AddFocusAreaDialog.tsx  AppleCalendarAgenda.tsx  ClusterTile.tsx  DailyQuestSystem.tsx  DraggableWidgetGrid.tsx  EmptyFocusAreaState.tsx  EmptyState.tsx  FileGrid.tsx  FileTile.tsx  FirstFocusAreaPrompt.tsx  FlippableWidget.tsx  FocusAreaBar.tsx  GlobalSearch.tsx  JobApplicationHeatMap.tsx  MonthlyCalendar.tsx  PermissionHelper.tsx  QuestRewardAnimation.tsx  QuickAccessPanel.tsx  QuickCapture.tsx  RecentActivitySidebar.tsx  RecentFileItem.tsx  RecentsPanel.tsx  RememberThisSection.tsx  ResistanceBreaker.tsx  ResurfaceCarousel.tsx  ResurfacedFileCard.tsx  SettingsModal.tsx  StarterTemplatePicker.tsx  UnifiedCard.tsx  ValueDashboard.tsx  ValuesIntegration.tsx  WeeklyCalendar.tsx  WelcomeOnboarding.tsx  WidgetGallery.tsx  WidgetSuggestions.tsx
src/components/settings/: CoreValuesEditor.tsx  QuickStartSection.tsx
src/components/widgets/: AffirmationWidget.tsx  AppleCalendarWidget.tsx  BreathingWidget.tsx  EnergyTrackerWidget.tsx  FileTypeBreakdownWidget.tsx  LinksWidget.tsx  NotebookWidget.tsx  PomodoroWidget.tsx  QuickSearchWidget.tsx  ScratchpadWidget.tsx  TitleWidget.tsx
src/lib/: global-themes.ts  icons.tsx  resurfacing-themes.ts  settings.ts  smart-defaults.ts  smartFileTagging.ts  starter-templates.ts  tauri.ts  useHasMounted.ts  useSystemThemeMode.ts  useThemeMode.ts  useTimeBasedUI.ts  value-colors.ts  value-icons.ts  value-templates.ts  widgets.ts  widgets.ts.backup
